2009-08-18  Aidan Kehoe  <kehoea@parhasard.net>

	* simple.el (handle-pre-motion-command-current-command-is-motion):
	Replace mapc + #'(lambda ...) with dolist, eliminating 781
	funcalls at XEmacs startup and decreasing GC a little.

2009-08-16  Aidan Kehoe  <kehoea@parhasard.net>

	* faces.el (xpm-color-symbols): 
	Call (featurep 'x) when faces.elc is dumped, not repeatedly
	(myriad times) at image instantiation time.

2009-08-14  Aidan Kehoe  <kehoea@parhasard.net>

	* minibuf.el (read-from-minibuffer): 
	Use buffer (format " *Minibuf-%d*" (minibuffer-depth)), regardless
	of depth. 

2009-08-11  Aidan Kehoe  <kehoea@parhasard.net>

	* cl-extra.el (ceiling*, floor*, round*, truncate*): 
	Implement these in terms of the C functions; mark them as
	obsolete. 
	(mod*, rem*): Use #'nth-value with the C functions, not #'nth with
	the CL emulation functions. 

2009-08-11  Aidan Kehoe  <kehoea@parhasard.net>

	* bytecomp.el :
	Update this file to support full C-level multiple values. This
	involves:
	-- Four new bytecodes, and special compiler functions to compile
	multiple-value-call, multiple-value-list-internal, values,
	values-list, and, since it now needs to pass back multiple values
	and is a special form, throw. 
	-- There's a new compiler variable, byte-compile-checks-on-load,
	which is a list of forms that are evaluated at the very start of a
	file, with an error thrown if any of them give nil. 
	-- The header is now inserted *after* compilation, giving a chance
	for the compilation process to influence what those checks
	are. There is still a check done before compilation for non-ASCII
	characters, to try to turn off dynamic docstrings if appopriate,
	in `byte-compile-maybe-reset-coding'.
	Space is reserved for checks; comments describing the version of
	the byte compiler generating the file are inserted if space
	remains for them.
	* bytecomp.el (byte-compile-version): 
	Update this, we're a newer version of the byte compiler.